syntax = "proto3";
package ssc.peers;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ssc/peers/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sagaxyz/ssc/x/peers/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ssc/peers/params";
  }
  // Queries a list of peers for a chainlet.
  rpc Peers(QueryPeersRequest) returns (QueryPeersResponse) {
    option (google.api.http).get = "/ssc/peers/peers";
  }
  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryPeersRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string chainId = 2;
}

message QueryPeersResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated string peers = 2;
}

// this line is used by starport scaffolding # 3
